# a2a-examples

./: .env-sample  .gitignore  CLAUDE.md  chart_agent.ipynb  pyproject.toml
a2a_mcp/: README.md  client.ipynb  common.py  mcp_client.py  mcp_server.ipynb  orchestrator_agent.ipynb  planner_agent.ipynb  prompts.py  travel_agents.ipynb  workflow.py
a2a_mcp/agent_cards/: air_ticketing_agent.json  car_rental_agent.json  hotel_booking_agent.json  orchestrator_agent.json  planner_agent.json
chart_agent/: chart_agent.ipynb  client.ipynb
